manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: weatherapi 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weatherapi
  template:
    metadata:
      labels:
        app: weatherapi 
    spec:
      containers:
        - name: weatherapi 
          image: wedbushdevacr.azurecr.io/weatherapi
          ports:
          - containerPort: 80
