manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: weatherapi
spec:
  type: ClusterIP
  selector:
    app: weatherapi
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
